<resources>
    <string name="app_name">PezyOnline</string>


    <string name="log_debug">PEZY DEBUG</string>
    <string name="log_info">PEZY INFO</string>
    <string name="log_error">PEZY ERROR</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_main">Main</string>
    <string name="title_category">Category</string>
    <string name="title_chat">Chat</string>
    <string name="title_live">Live</string>
    <string name="title_cart">Cart</string>

    <string name="terms_and_conditions">
                เงื่อนไขการให้บริการนี้เป็นข้อตกลงระหว่าง บริษัท ทรู -
        อีโลจิสติกส์ จำกัด ซึ่งมีสำนักงานใหญ่ตั้งอยู่เลขที่ 18 อาคาร
        ทรูทาวเวอร์ ถนนรัชดาภิเษก แขวงห้วยขวาง เขตห้วยขวาง
        กรุงเทพมหานคร (ซึ่งต่อไปนี้จะเรียกว่า “บริษัท”) ฝ่ายหนึ่ง กับ
        ผู้ใช้บริการ (ซึ่งต่อไปนี้จะเรียกว่า “ผู้ใช้บริการ”) อีกฝ่ายหนึ่ง
        เพื่อใช้บริการทางด้านระบบโลจิสติกส์ (ซึ่งต่อไปนี้จะเรียกว่า
        “บริการ”)

        1. ข้อกําหนดทั่วไป
        1.1 ผู้ใช้บริการตกลงที่จะปฏิบัติและผูกพันตามเงื่อนไขการให้
        บริการ ซึ่งการใช้บริการของผู้ใช้บริการถือเป็นการยอมรับเงื่อน-
        ไขการให้บริการนี้ โดยบริษัทอาจแก้ไข หรือเพิ่มเติมเงื่อนไขการ
        ให้บริการได้ ไม่ว่าในเวลาใด โดยไม่ต้องแจ้งให้ผู้ใช้บริการ
        ทราบล่วงหน้า เว้นแต่เป็นการแก้ไขที่ส่งผลกระทบต่อผู้ใช้บริการ
        อย่างมีนัยสำคัญ และการที่ผู้ใช้บริการใช้บริการต่อไปภายหลัง
        จากที่มีการแก้ไข หรือเพิ่มเติมดังกล่าว ย่อมถือเป็นการยอมรับ
        การแก้ไข หรือเพิ่มเติมในแต่ละครั้ง
        1.2 เว้นแต่จะได้มีการแจ้ง หรือกําหนดไว้เป็นอย่างอื่น คุณลักษณะ
        ใหม่ๆ ที่ได้แก้ไข เพิ่มเติม หรือปรับปรุงในบริการให้ถือว่าอยู่
        ภายใต้เงื่อนไขการให้บริการฉบับนี้ทั้งสิ้น
        1.3 บริษัทสงวนสิทธิ์ในการปรับปรุงหรือยกเลิกการบริการ
        หรือส่วนใดส่วนหนึ่งของบริการ ไม่ว่าจะเป็นการชั่วคราว
        หรือตลอดไปได้ตลอดเวลา โดยจะแจ้งให้ผู้ใช้บริการทราบ
        ล่วงหน้า

        บริษัท เป็นบริษัทที่ให้บริการด้านเทคโนโลยี ซึ่งไม่ได้ให้บริการ
        ด้านการขนส่งมวลชนหรือบริการขนส่งสินค้าและไม่ได้เป็นผู้
        ให้บริการขนส่งมวลชน โดยในส่วนของการบริการขนส่ง
        มวลชนนั้นจะเป็นผู้ให้บริการขนส่งมวลชนซึ่งเป็นบุคคลที่สาม
        และเป็นสิทธิของผู้ใช้บริการเองที่จะเลือกใช้บริการดังกล่าว
        บริการของบริษัททำหน้าที่เป็นผู้เชื่อมต่อระบบกับผู้ให้บริการที่
        เป็นบุคคลที่สามเท่านั้น ไม่ได้มีวัตถุประสงค์เพื่อให้บริการการ
    </string>


    <string-array name="gender">
        <item>ชาย</item>
        <item>หญิง</item>
    </string-array>

</resources>
